--- a/login.html
+++ b/login.html
@@ -24,50 +24,29 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign in to start your session</p>
-
-      <form action="#" method="post">
-        <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email">
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-envelope"></span>
-            </div>
+      <p class="login-box-msg text-bold">Sign in to start your session</p>
+      <form action="">
+        <div class="inputField mt-2 mb-3">
+          <label for="" class="d-block">username</label>
+          <input type="text" required>
+          <div class="form__icon">
+            <span class="fas fa-user"></span>
           </div>
         </div>
-        <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password">
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-lock"></span>
-            </div>
+        <div class="inputField mt-2">
+          <label for="" class="d-block">password</label>
+          <input type="password" id="pwdInput" required>
+          <div class="form__icon">
+            <span id="pwdIcon" class="fas fa-eye"></span>
           </div>
         </div>
-        <div class="row">
-          <div class="col-8">
-            <div class="icheck-primary">
-              <input type="checkbox" id="remember">
-              <label for="remember">
-                Remember Me
-              </label>
-            </div>
-          </div>
-          <!-- /.col -->
-          <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
-          </div>
-          <!-- /.col -->
+        <div class="login__btn">
+          <button class="btn-primary mt-3">login</button>
+        </div>
+        <div class="forget_link text-center mt-2">
+          <p>Not registered?<a href="#"> Create an account.</a></p>
         </div>
       </form>
-      <!-- /.social-auth-links -->
-      <div class="d-flex justify-content-between mt-3">
-        <p class="mb-1 text-sm">
-            <a href="forgot-password.html">forgot password?</a>
-          </p>
-          <p class="mb-0 text-sm">
-            <a href="register.html" class="text-center">Register a new user</a>
-          </p>
-      </div>
       
     </div>
     <!-- /.login-card-body -->
@@ -81,5 +60,18 @@
 <script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="./assets/vendor/admin/js/adminlte.min.js"></script>
+<script>
+let pwdIcon = document.getElementById('pwdIcon');
+let inputType = document.getElementById('pwdInput');
+pwdIcon.addEventListener('click', ()=>{
+  if(inputType.type == 'password'){
+    inputType.type = 'text';
+    pwdIcon.classList.add('fa-eye-slash')
+  }else{
+    inputType.type = 'password';
+    pwdIcon.classList.remove('fa-eye-slash')
+  }
+})
+</script>
 </body>
 </html>
